[gd_scene load_steps=3 format=3 uid="uid://k0eru0jyth8d"]

[ext_resource type="Script" uid="uid://3cr1aextj3bw" path="res://scenes/battle/SlotMachine/slot_machine.gd" id="1_kicpr"]
[ext_resource type="PackedScene" uid="uid://cx8mcpq7h5l86" path="res://scenes/battle/SlotMachine/slot.tscn" id="2_j5cky"]

[node name="SlotMachine" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kicpr")
slot_scene = ExtResource("2_j5cky")

[node name="SlotContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 115

[node name="RollButton" type="Button" parent="."]
layout_mode = 2
offset_right = 49.0
offset_bottom = 40.0
size_flags_horizontal = 8
text = "ROLL
"
